--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
  <!-- Header -->
 <header class="masthead text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="https://github.com/LilyMarcela/LilyMarcela.github.io-portfolio/blob/master/prof.jpg" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="https://d32xj74kbqkoqn.cloudfront.net/uploads/trail/trail_image/4/foundations-video-thumb.jpg" alt="">
         <h1 class="text-uppercase mb-0">Ruby on Rails Fullstack Developer</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Web pages and Web API Development</h2>
@@ -104,9 +104,9 @@
   <div class="flex-container" id="Projects">
     <h2 class="text-center">Projects</h2>
       <div class=" d-flex justify-content-around">
-        <img src="ideas.png" class="rounded float-left" alt="">
-        <img src="ideas.png" class="rounded" alt="">
-        <img src="ideas.png" class=class="rounded float-right" alt="">            
+        <img src="https://github.com/LilyMarcela/LilyMarcela.github.io-portfolio/blob/master/ideas.png" class="rounded float-left" alt="">
+        <img src="https://github.com/LilyMarcela/LilyMarcela.github.io-portfolio/blob/master/ideas.png" class="rounded" alt="">
+        <img src="https://github.com/LilyMarcela/LilyMarcela.github.io-portfolio/blob/master/ideas.png" class=class="rounded float-right" alt="">            
       </div>
 </section>
 
